<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EatWhatDemo</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="add_restaurant_ListView_Text">饭店</string>
    
    <string name="add_menu_ListView_Text">菜名</string>
    
    <string name="add_del_update_serachText">增 删 改 查：</string>
    
    
    <string name="add_restaurant_name_textView_Text">饭店名字：</string>
    <string name="add_restaurant_addr_textView_Text">饭店地址：</string>
    <string name="add_restaurant_phone_textView_Text">饭店电话：</string>
    
    <string name="add_restaurant_name_textView_Hint">饭店名</string>
    <string name="add_restaurant_addr_textView_Hint">饭店地址</string>
    <string name="add_restaurant_phone_textView_Hint">电话</string>
    
    <string name="add_restaurant_description_editText_Text">饭店的描述</string>
    
    
    <string name="add_restaurant_commit_button_Text">确认</string>
    <string name="add_restaurant_back_button_Text">返回</string>
    
    <string name="add_menu_commit_button_Text">确认</string>
    <string name="add_menu_back_button_Text">返回</string>
    
    <string name="add_menu_name_textView_Text">菜名</string>
    
    <string name="add_menu_name_textView_Hint">待定义的菜名</string>
    <string name="add_menu_description_textView_Hint">菜的描述信息</string>
    
    <string name="edit_restaurant_name_textView_Text">饭店名字：</string>
    <string name="edit_restaurant_addr_textView_Text">饭店地址：</string>
    <string name="edit_restaurant_phone_textView_Text">饭店电话：</string>
    
    <string name="edit_restaurant_name_textView_Hint">饭店名</string>
    <string name="edit_restaurant_addr_textView_Hint">饭店地址</string>
    <string name="edit_restaurant_phone_textView_Hint">电话</string>
    
    <string name="edit_restaurant_description_editText_Text">饭店的描述</string>
    
    <string name="title_activity_del_update_restaurant">更新和删除饭店</string>
    <string name="title_activity_del_update_menu">更新和删除菜单</string>
    <string name="title_activity_search_restaurant">查询饭店</string>
    <string name="title_activity_search_menu">查询菜单</string>
    <string name="title_activity_add_menu">新增一个菜单</string>
    <string name="title_activity_add_restaurant">新增一个饭店</string>

    <string name="restaurant">饭店：</string>
    <string name="address">地址：</string>
    <string name="phone">电话：</string>
    <string name="description">描述：</string>
    
    <string name="dialog_breakfast_radiogroup_text">早餐</string>
    <string name="dialog_lunch_radiogroup_text">中餐</string>
    <string name="dialog_supper_radiogroup_text">晚餐</string>
    <string name="dialog_other_radiogroup_text">其他</string>
    <string name="dialog_eatornot_text">就吃这个了？！</string>
    
    <string name="dialog_ok">确定</string>
    <string name="dialog_shakeagain">再摇一次</string>
    
    <string-array name="delete_or_edit_menu">
        <item>删除</item>
        <item>编辑</item>
    </string-array>
    <string name="delete_or_edit_dialog_title">删除？编辑</string>
    <string name="edit_restaurant_dialog_title">编辑</string>
    <string name="edit_menu_dialog_title">编辑</string>
    
    
    <string-array name="adddelupdatesearch">
        <item>添加一个饭店</item>
        <item>添加一个菜单</item>
        <item>删除和修改一个饭店</item>
        <item>删除和修改一个菜单</item>
        <item>查询饭店</item>
        <item>查询菜单</item>
    </string-array>

</resources>