<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_restaurant_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_restaurant_name_textView_Text" />

        <EditText
            android:id="@+id/edit_restaurant_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_restaurant_name_textView_Hint"
            android:inputType="text" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_restaurant_addr_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_restaurant_addr_textView_Text" />

        <EditText
            android:id="@+id/edit_restaurant_addr_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_restaurant_addr_textView_Hint"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/edit_restaurant_phone_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_restaurant_phone_textView_Text" />

        <EditText
            android:id="@+id/edit_restaurant_phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_restaurant_phone_textView_Hint"
            android:inputType="phone" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_restaurant_description_editText"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:text="@string/edit_restaurant_description_editText_Text" />
    </LinearLayout>

   
  
    

</LinearLayout>