<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddRestaurantActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_restaurant_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_restaurant_name_textView_Text" />

        <EditText
            android:id="@+id/add_restaurant_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_restaurant_name_textView_Hint"
            android:inputType="text" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_restaurant_addr_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_restaurant_addr_textView_Text" />

        <EditText
            android:id="@+id/add_restaurant_addr_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_restaurant_addr_textView_Hint"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_restaurant_phone_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_restaurant_phone_textView_Text" />

        <EditText
            android:id="@+id/add_restaurant_phone_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_restaurant_phone_textView_Hint"
            android:inputType="phone" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_restaurant_description_editText"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:text="@string/add_restaurant_description_editText_Text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addrestaurantcommitbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_restaurant_commit_button_Text" />

        <Button
            android:id="@+id/addrestaurantbackbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_restaurant_back_button_Text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="6"
        android:orientation="horizontal" >

        <ExpandableListView
            android:id="@+id/add_restaurant_expandablelistview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@null"
            android:childIndicatorLeft="0dp"
            android:dividerHeight="1dp"
            android:groupIndicator="@null"
            android:scrollbarAlwaysDrawHorizontalTrack="true" >
        </ExpandableListView>
    </LinearLayout>

</LinearLayout>