<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddRestaurantActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_menu_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_menu_name_textView_Text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_menu_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_menu_name_textView_Hint"
            android:inputType="text" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/add_restaurant_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/add_restaurant_name_textView_Text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/add_restaurant_spinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_menu_description_editText"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/add_menu_description_textView_Hint"
            android:inputType="textMultiLine" >

            <requestFocus android:layout_width="match_parent" />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_menu_commit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_menu_commit_button_Text" />

        <Button
            android:id="@+id/add_menu_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_menu_back_button_Text" />
    </LinearLayout>

</LinearLayout>